<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/fab_margin"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:textSize="@dimen/size_din_param"
        android:textColor="@color/color_complain"
        android:layout_height="wrap_content"
        android:text="@string/no_email" />

    <EditText
        android:id="@+id/et_email"
        android:layout_margin="@dimen/fab_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:singleLine="true"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:stateListAnimator="@null"
            android:textAllCaps="false"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_phone"
            android:layout_height="wrap_content"
            android:textColor="@color/selector_btn_text_phone"
            android:textAllCaps="false"
            android:text="@string/send" />
    </LinearLayout>
</LinearLayout>