<LinearLayout
    style="@style/Container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".presentation.ui.login.VKLoginActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="bottom"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/user_pic"
        android:layout_width="100dp"
        android:adjustViewBounds="true"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/user_name"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@android:color/white"
        android:textSize="@dimen/size_din_param"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome" /></LinearLayout>
    <Button
        android:id="@+id/continue_button"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:background="@drawable/bg_btn_login"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:textColor="@color/selector_btn_text_phone"
        android:text="@string/continue_app"/>

    <Button
        android:id="@+id/logout"
        style="@style/Button"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_marginTop="16dp"
        android:textAllCaps="false"
        android:background="@drawable/bg_btn_login"
        android:textColor="@color/selector_btn_text_phone"
        android:text="@string/logout"/>
</LinearLayout>